# py_weather_map

./: .gitignore  .ruff.toml  Makefile  README.md  data.py  europe.py  europe_countries_map.html  get_border.py  gps_coordinates.csv  gps_coordinates_italy.csv  heatmap.html  italy.py  italy2.py  italy_border.py  italy_border2.py  italy_border_map.html  pyproject.toml  test.py  triangulated_map_italy.html  weather_data.csv  weather_data_italy.csv
.github/: dependabot.yml
data/: gen_nominatim_enum.py  nominatim.json
src/weather_map/: run.py  run2.py
src/weather_map/adapter/folium_adapter/: factory.py  folium_adapter.py
src/weather_map/adapter/nominatim_adapter/: factory.py  nominatim_adapter.py
src/weather_map/adapter/osmnx_adapter/: factory.py  osmnx_adapter.py  transform.py
src/weather_map/adapter/osmnx_compute_border_adapter/: osmnx_compute_border_adapter.py
src/weather_map/domain/model/: border.py  bounds.py  coordinate.py  location.py  polygon.py
src/weather_map/port/: compute_border.py  compute_border_port.py  geocoding_port.py  map_port.py
src/weather_map/utils/: errors.py  get_border.py  nominatim.py
test/int/adapter/nominatim_adapter/: conftest.py  test_int_search.py
test/int/adapter/osmnx_adapter/: conftest.py  test_int_compute_border.py
test/unit/adapter/osmnx_adapter/: conftest.py  test_unit_compute_area.py  test_unit_get_utm_zone.py  test_unit_transform_multipolygon_to_utm.py  test_unit_transform_polygon_to_utm.py
test/unit/adapter/osmnx_adapter/data/: multipolygon_sicily.wkt
test/unit/domain/model/: conftest.py  test_unit_border.py  test_unit_bounds.py  test_unit_polygon.py
