[tool.poetry]
name = "weather-map"
version = "0.1.0"
description = ""
authors = ["Ondrej Winter <ondrej.winter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
folium = "^0.16.0"
pandas = "^2.2.2"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
geopandas = "^0.14.4"
osmnx = "^1.9.3"
pydantic = "^2.7.1"
selenium = "^4.21.0"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
ruff = "^0.4.4"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
