[tool.poetry]
name = "weather-map"
version = "0.0.0"
description = ""
authors = ["Ondrej Winter <ondrej.winter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopy = "^2.4.1"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
ruff = "^0.4.5"
coverage = "^7.5.1"
docformatter = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
