[tool.poetry]
name = "weather-map"
version = "0.0.0"
description = ""
authors = ["Ondrej Winter <ondrej.winter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
geopy = "^2.4.1"
osmnx = "^1.9.3"
pydantic = "^2.7.1"
python = "^3.12"
shapely = "^2.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
coverage = "^7.5.1"
docformatter = "^1.7.5"
pytest = "^8.2.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
